Finishing touches on details page - Arrow now dynamically moves with size - Crop logo to fix links overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -238,7 +238,6 @@ code {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 0px 20px 20px 0px;
   color: #5D1A91;
   text-decoration: none;
   animation: slideDown 1s ease-in-out;
