--- a/src/components/HouseDetails/HouseDetails.css
+++ b/src/components/HouseDetails/HouseDetails.css
@@ -37,17 +37,16 @@
   position: absolute;
   z-index: 1;
   cursor: pointer;
-  background-color: hsl(274, 70%, 34%, 0.6);
-  width: 40px;
+  background-color: transparent;
+  width: 100%;
   height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 40px;
   padding: none;
   color: white;
-  border-radius: 30%;
-  left: 105px;
+  left: 0px;
+  margin-top: -8px;
   transform: translateY(-50%);
 }
 
@@ -56,18 +55,24 @@
   top: 100%;
   z-index: 1;
   cursor: pointer;
-  background-color: hsl(274, 70%, 34%, 0.6);
-  width: 40px;
+  background-color: transparent;
+  width: 100%;
   height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: none;
   color: white;
-  border-radius: 30%;
-  left: 105px;
+  left: 0px;
+  margin-top: 8px;
   transform: translateY(-50%);
 }
 
+.a-div {
+  background-color: hsl(274, 70%, 34%, 0.6);
+  padding: 5px 10px 2px 10px;
+  border-radius: 5px;
+}
 
 
 .next-arrow-details {
@@ -78,8 +83,7 @@
   bottom: 0px;
 }
 
-.next-arrow-details:hover,
-.prev-arrow-details:hover {
+.a-div:hover {
   color: white;
   background-color: hsl(274, 70%, 34%, 1);
 }
